update pagination for core service
